# TheEyeBetaProd

./: .clang-format  .env.age  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .sops.yaml  .sqlfluff  .sqlfluffignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SERVICES_STATUS.md  Untitled  cliff.toml  docker-compose.yml  pyproject.toml  renovate.json  theeye
cpp/: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  conanfile.py
cpp/bench/: CMakeLists.txt  README.md  bench_common.hpp  bt_bench.cpp  oms_bench.cpp  opt_bench.cpp  risk_bench.cpp  ta_bench.cpp
cpp/bench/baselines/: linux-release.json
cpp/bindings/: CMakeLists.txt  _zinc_bt.cpp  _zinc_oms.cpp  _zinc_opt.cpp  _zinc_risk.cpp  _zinc_ta.cpp
cpp/src/bt/: engine.cpp  slippage_model.cpp
cpp/src/oms/: order.cpp  position_tracker.cpp  state_machine.cpp
cpp/src/opt/: black_litterman.cpp  hrp.cpp  mvo.cpp
cpp/src/risk/: correlation_matrix.cpp  cvar.cpp  historical_var.cpp  max_drawdown.cpp
cpp/src/ta/: adx.cpp  atr.cpp  bollinger.cpp  hmm_regime.cpp  rsi.cpp  snapshot_technicals.cpp  zscore.cpp
cpp/tests/: CMakeLists.txt  bt_engine_test.cpp  bt_test_parquet.hpp  oms_position_tracker_test.cpp  oms_state_machine_test.cpp  opt_black_litterman_test.cpp  opt_hrp_test.cpp  opt_mvo_test.cpp  risk_correlation_matrix_test.cpp  risk_cvar_test.cpp  risk_historical_var_test.cpp  risk_max_drawdown_test.cpp  ta_adx_test.cpp  ta_atr_test.cpp  ta_bollinger_test.cpp  ta_hmm_regime_test.cpp  ta_test_reference.hpp  ta_zscore_test.cpp
libs/zinc_native/: pyproject.toml
libs/zinc_native/tests/: test_bt.py  test_oms.py  test_opt.py  test_risk.py  test_ta.py
libs/zinc_native/zinc_native/: __init__.py  _risk_numpy.py  bt.py  oms.py  opt.py  risk.py  ta.py
libs/zinc_proto/: compliance.proto  guard.proto  pyproject.toml  risk.proto
libs/zinc_schemas/: pyproject.toml  restricted.yaml
libs/zinc_schemas/tests/: test_llm_client.py  test_llm_client_integration.py  test_snapshot_validator.py
libs/zinc_test/: pyproject.toml
services/admin_service/: .env.example  Dockerfile  FRONTEND.md  audit_log.py  auth.py  auth_mfa.py  auth_sessions.py  db_compat.py  deps.py  errors.py  frontend_paths.py  main.py  pyproject.toml  rbac.py  settings.py  web.py
services/admin_service/api/: __init__.py  agents.py  alerts.py  audit.py  backtest.py  backtests.py  briefings.py  broker.py  cloudflare.py  commands.py  compliance.py  costs.py  dataapi.py  edge.py  edge_views.py  events.py  guard.py  market_data.py  master_admin.py  module_views.py  oms.py  ops.py  orders.py  pipelines.py  prelive.py  proposals.py  reports.py  risk.py  sectors.py  services.py  snapshots.py  sql.py  terminal_data.py  timers.py  trading.py  trask.py  universe.py  users.py  views.py  workers.py
services/admin_service/blotter_control/: __init__.py  client.py  orders_helpers.py  reconciliation.py  registry.py  repository.py  service.py
services/admin_service/command_control/: executor.py  parser.py  registry.py  repository.py  service.py
services/admin_service/compliance_control/: __init__.py  client.py  registry.py  repository.py  service.py
services/admin_service/control_matrix/: __init__.py  expected_registry.py  registry.py  staleness.py  validation.py
services/admin_service/dataapi_control/: __init__.py  client.py
services/admin_service/edge/: __init__.py  canonical_routes.py  cloudflare_client.py  config_reader.py  drift_checker.py  probes.py  service.py
services/admin_service/intelligence_control/: registry.py  repository.py  service.py
services/admin_service/lib/: __init__.py  event_broadcaster.py  metrics.py  worker_registry.py
services/admin_service/market_control/: __init__.py  client.py  registry.py  repository.py  service.py
services/admin_service/risk_control/: __init__.py  client.py  registry.py  repository.py  service.py
services/admin_service/sector_control/: __init__.py  client.py  service.py
services/admin_service/services_control/: __init__.py  logs.py  registry.py  repository.py  service.py  systemd_probe.py
services/admin_service/static/: style.css
services/admin_service/templates/: _modal.html  _nav.html  agents.html  audit.html  base.html  briefings.html  costs.html  dashboard.html  login.html  master_admin.html  orders.html  proposals.html  sql.html  violations.html
services/admin_service/tests/: conftest.py  test_agents.py  test_agents_page.py  test_audit.py  test_audit_page.py  test_auth.py  test_auth_security.py  test_backtest.py  test_blotter.py  test_commands.py  test_compliance.py  test_control_matrix.py  test_control_plane.py  test_costs.py  test_costs_page.py  test_dashboard.py  test_edge.py  test_frontend.py  test_guard.py  test_intelligence.py  test_layout.py  test_load.py  test_market_data.py  test_master_admin.py  test_orders.py  test_orders_page.py  test_proposals.py  test_proposals_page.py  test_rbac.py  test_risk.py  test_services.py  test_settings.py  test_sql.py  test_sql_page.py  test_terminal_data.py  test_trading.py  test_trading_halt.py  test_users.py  test_violations_page.py  test_workers.py
services/admin_service/trading_control/: __init__.py  probes.py  repository.py  (+2 more)
services/agent_runtime/: main.py  pyproject.toml
services/audit_service/: pyproject.toml
services/backtest_engine/: main.py  pyproject.toml
services/broker_adapter_alpaca/: main.py  pyproject.toml
services/compliance_service/: main.py  pyproject.toml
services/data_ingestion/: Dockerfile  main.py  pyproject.toml
services/guard_service/: creative_classifier.py  main.py  pyproject.toml
services/master_orchestrator/: debate.py  idempotency.py  main.py  observability.py  pyproject.toml  workflow.py
services/oms/: main.py  pyproject.toml  reconciliation.py  state.py
services/risk_service/: main.py  pyproject.toml  validator.py
services/rnd_agent/: main.py  pyproject.toml
services/snapshot_packager/: Dockerfile  main.py  pyproject.toml
tb/: pyproject.toml
tb/tb/: __init__.py  cli.py  db.py
tb/tests/: test_snapshots_cli.py
(+863 files in other folders)
