# ─────────────────────────────────────────────────────────────────────────────
# theeyebeta — workspace root pyproject.toml
#
# WORKSPACE LAYOUT
# ─────────────────────────────────────────────────────────────────────────────
# This file is the single resolver root for the entire Python monorepo.
# Running `uv sync` from the repo root installs every member's dependencies
# into one virtual environment (.venv/) without duplication.
#
# Members (glob-resolved by uv):
#   services/*   – deployable FastAPI/asyncio services
#   libs/*       – shared internal libraries (imported by services)
#   tb/          – the `tb` CLI tool
#
# Each member has its own pyproject.toml that declares its private deps.
# Shared/pinned versions live here under [tool.uv.workspace] so the whole
# tree is guaranteed to use the same version of every core library.
#
# Common workflows:
#   uv sync                        # install everything (dev + all members)
#   uv sync --package market-service   # install only one service + its deps
#   uv run pytest                  # run tests from the workspace venv
#   uv run --package tb tb status  # run the tb CLI
#   uv add httpx --package libs/zinc-core  # add a dep to a specific member
#   uv lock --upgrade              # re-solve the lockfile with latest versions
# ─────────────────────────────────────────────────────────────────────────────

# The workspace root is NOT a publishable package itself — it exists only to
# anchor the resolver. Use requires-python here to enforce the floor across
# all members.
[project]
name        = "theeyebeta-workspace"
version     = "0.0.0"
description = "Workspace root — not a publishable package"
requires-python = ">=3.12"
# No runtime dependencies here — see [tool.uv.workspace] for shared pins
# and [dependency-groups] for dev-only tooling.
dependencies = []

# ── uv workspace ─────────────────────────────────────────────────────────────
[tool.uv.workspace]
members = [
    "services/*",
    "libs/*",
    "tb",
]

# Shared version constraints — every member that declares one of these deps
# will be resolved to AT LEAST the version pinned here.  Prevents different
# services silently running different major versions of the same library.
[tool.uv]
constraint-dependencies = [
    # Web framework
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Database
    "sqlalchemy[asyncio]>=2.0.34",
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.2",
    "pydantic-settings>=2.4",

    # Caching / messaging
    "redis>=5.0",
    "nats-py>=2.8",

    # HTTP client
    "httpx>=0.27",

    # Logging
    "structlog>=24.4",

    # Data ingestion
    "yfinance>=0.2.50",
    "fredapi>=0.5.2",
    "polars[rtcompat]>=1.12",
    "pyarrow>=18.0",
    "tenacity>=9.0",
    "pyyaml>=6.0",
    "typer>=0.15",
    "jsonschema>=4.23",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "feedparser>=6.0",
    "alpaca-py>=0.33",
    "bcrypt>=4.2",
    # litellm[proxy] 1.88.1 imports openai._models and requires openai>=2.20,<3.
    # A loose ">=1.55" let a broken/mismatched openai crash-loop theeyebeta-litellm
    # (ModuleNotFoundError: No module named 'openai._models'). Pin to litellm's range.
    "openai>=2.20.0,<3.0.0",
    "python-frontmatter>=1.1",

    # OpenTelemetry
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

# ── Dev-only dependency group (not installed in production images) ───────────
[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "httpx>=0.27",               # also used by pytest-httpx
    "testcontainers[postgres,redis]>=4.8",
    "asyncpg>=0.30",
    "minio>=7.2",
    "nats-py>=2.8",

    # Database
    "alembic>=1.13",
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy[asyncio]>=2.0.34",

    # Linting + formatting
    "ruff>=0.9",
    "black>=25.1",
    "mypy>=1.11",
    "sqlfluff>=3.0",

    # Type stubs
    "types-redis>=4.6",

    # Secrets
    "pre-commit>=3.8",
    "vcrpy>=6.0",
    "grpcio-tools>=1.68",
    "respx>=0.21",
    "zinc-test",

    # Frontend e2e (P-FE-FINAL) — browser automation + WCAG audit.
    # ``playwright install chromium`` must be run once per dev box / CI image
    # before the ``-m frontend`` tests can execute.
    "playwright>=1.48",
    "pytest-playwright>=0.5",
]

# ── Workspace-member resolution sources ──────────────────────────────────────
# Tell uv that the named first-party packages live inside this workspace
# (i.e. their wheels come from ``libs/<name>``) rather than PyPI.
[tool.uv.sources]
zinc-test = { workspace = true }

# ── Build system (workspace root is not built; members use their own) ─────────
# No [build-system] block here — the workspace root is not a package.
# Each member that produces a wheel declares its own [build-system].

# ─────────────────────────────────────────────────────────────────────────────
# TOOL CONFIGURATION
# All tools are configured here at workspace root so member pyproject.tomls
# don't need to repeat them (tools respect nearest-ancestor config).
# ─────────────────────────────────────────────────────────────────────────────

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py312"
# Extend to exclude generated migration files from some checks
extend-exclude = [
    "*/migrations/versions/*.py",
    "libs/zinc_proto/**",          # generated by grpc-tools — never manually edited
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ANN", # flake8-annotations (public API must be typed)
    "ASYNC", # flake8-async (no sync I/O in async functions)
    "S",   # flake8-bandit (security)
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert (fine in tests)
    "B008",   # do not perform function calls in default args (FastAPI Depends pattern)
]
# Per-path rule overrides
[tool.ruff.lint.per-file-ignores]
"tests/**"             = ["ANN", "S", "E402", "ASYNC109", "F821"]
"services/**/tests/**" = ["ANN", "S", "E402"]           # relaxed in all service test dirs
"services/admin_service/tests/**" = ["ANN", "S", "E402"]
"libs/**/tests/**"     = ["ANN", "S", "E402", "E501"]
"**/migrations/**"     = ["ANN", "E501"]                # generated migration files
"services/admin_service/**" = ["S104", "S105", "S106"]  # JWT/OAuth token literals
"scripts/**"           = ["ANN", "S603", "S607", "S608", "E501"]  # internal ops scripts
"tb/**"                = ["S603", "S607"]  # CLI subprocess wrappers
"services/data_ingestion/src/data_ingestion/writers/postgres_writer.py" = ["S608"]  # {conflict} is hardcoded SQL clause, not user input

[tool.ruff.lint.isort]
known-first-party = [
    "zinc_schemas",
    "zinc_native",
    "zinc_proto",
    "zinc_test",
    "guard_service",
    "compliance_service",
    "master_orchestrator",
    "oms",
    "broker_adapter_alpaca",
    "risk_service",
    "backtest_engine",
    "audit_service",
    "rnd_agent",
    "tb",
]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style             = "double"
indent-style            = "space"
skip-magic-trailing-comma = false

# ── black ─────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py312"]
# black and ruff-format are kept in sync; black acts as a safety-net pass.
# Mirrors [tool.ruff] extend-exclude — generated/migration files aren't hand-formatted.
extend-exclude = '''
(
    /migrations/versions/.*\.py$
    | libs/zinc_proto/
)
'''

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.12"
strict                 = true       # --strict on for all packages by default
exclude = '''(?x)(
    ^libs/zinc_proto/
    | ^libs/zinc_native/
    | ^libs/zinc_test/
    | ^libs/.*/tests/
    | ^libs/zinc_schemas/src/zinc_schemas/(constitution|packaged_snapshot|restricted|snapshot|snapshot_validator)\.py$
)'''

# Per-package overrides: services get slightly looser rules (FastAPI decorators)
[[tool.mypy.overrides]]
module                 = "services.*"
disallow_untyped_decorators = false

# Generated migration files are not type-checked
[[tool.mypy.overrides]]
module                 = "*.migrations.*"
ignore_errors          = true

# Third-party stubs that don't ship their own
[[tool.mypy.overrides]]
module = [
    "nats.*",
    "testcontainers.*",
    "alembic.*",
    "yaml.*",
]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"          # all async tests run without @pytest.mark.asyncio
testpaths    = ["tests", "services", "libs"]
pythonpath   = ["."]           # make `workers` importable so `make test` collects worker tests
addopts      = "--tb=short -q --import-mode=importlib"  # importlib: unique names per file, avoids test_load.py collisions
markers = [
    "unit:        pure-logic tests, no I/O (deselect: -m 'not unit')",
    "integration: testcontainers, no make up required",
    "smoke:       full-stack, requires make up",
    "e2e:         end-to-end lifecycle tests (requires make up)",
    "validation:  backtest correctness gates (Phase 10)",
    "load:        guard-service load/latency tests",
    "frontend:    Playwright e2e + axe-core a11y audit (requires chromium browsers)",
]
# Treat exit code 5 (no tests collected) as success — keeps CI green on empty repo
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:testcontainers",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source   = ["libs", "services", "tb"]
omit     = ["*/migrations/*", "*/tests/*", "*_test.py", "*/conftest.py"]
branch   = true

[tool.coverage.report]
show_missing         = true
skip_covered         = false
fail_under           = 70        # workspace-wide floor; libs/ CI target is 85%
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
