[project]
name = "tb"
version = "0.1.0"
description = "theeyebeta management CLI"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "httpx>=0.27",
    "typer>=0.15",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "asyncpg>=0.30",
    "minio>=7.2",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }

[project.scripts]
tb = "tb.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tb"]
