[project]
name = "zinc-native"
version = "0.1.0"
description = "C++ compute kernels for theeyebeta (nanobind extensions)"
requires-python = ">=3.12"
dependencies = ["numpy>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zinc_native"]
