[project]
name = "zinc-proto"
version = "0.1.0"
description = "gRPC/protobuf contracts for theeyebeta"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.68",
    "protobuf>=5.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zinc_proto"]
