[project]
name = "zinc-schemas"
version = "0.1.0"
description = "Shared Pydantic models for theeyebeta data contracts"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zinc_schemas"]
