[project]
name = "zinc-test"
version = "0.1.0"
description = "Shared pytest fixtures for theeyebeta integration tests"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.3",
    "testcontainers[postgres,redis]>=4.8",
    "psycopg[binary,pool]>=3.2",
    "respx>=0.21",
    "httpx>=0.27",
    "minio>=7.2",
    "structlog>=24.4",
    "python-dotenv>=1.0",
]

[project.entry-points."pytest11"]
zinc_test = "zinc_test.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zinc_test"]
