[project]
name = "admin-service"
version = "0.1.0"
description = "theeyebeta admin dashboard API (JWT, htmx backend)"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "audit-service",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "bcrypt>=4.2",
    "pyjwt[crypto]>=2.9",
    "slowapi>=0.1.9",
    "asyncpg>=0.30",
    "nats-py>=2.8",
    "redis>=5.0",
    "httpx>=0.27",
    "sqlparse>=0.5",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "pyotp>=2.9",
    "prometheus-client>=0.21",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }
audit-service = { workspace = true }

[tool.uv]
package = false
