[project]
name = "agent-runtime"
version = "0.1.0"
description = "theeyebeta agent runtime — constitution loader, LLM client, guard, runner"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "psycopg[binary,pool]>=3.2",
    "openai>=1.55",
    "pydantic>=2.9",
    "python-frontmatter>=1.1",
    "typer>=0.15",
    "structlog>=24.4",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }

[project.scripts]
tb-agent = "agent_runtime.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime"]
