[project]
name = "agent-runtime"
version = "0.1.0"
description = "theeyebeta agent runtime — snapshot load, LLM, math tool, guard, runner"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "zinc-native",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "python-frontmatter>=1.1",
    "typer>=0.15",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "redis>=5.0",
    "nats-py>=2.8",
    "minio>=7.2",
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.21",
    "zinc-proto",
    "grpcio>=1.68",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }
zinc-native = { workspace = true }
zinc-proto = { workspace = true }

[project.scripts]
tb-agent = "agent_runtime.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime"]
