[project]
name = "audit-service"
version = "0.1.0"
description = "theeyebeta hash-chained audit log writer and WORM exporter"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "nats-py>=2.8",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "minio>=7.2",
    "cryptography>=43.0",
    "apscheduler>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_service"]
