[project]
name = "backtest-engine"
version = "0.1.0"
description = "theeyebeta backtest engine — zinc_native.bt orchestration"
requires-python = ">=3.12"
dependencies = [
    "zinc-native",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "minio>=7.2",
    "pyarrow>=18.0",
    "numpy>=2.0",
]

[tool.uv.sources]
zinc-native = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backtest_engine"]
