[project]
name = "broker-adapter-alpaca"
version = "0.1.0"
description = "theeyebeta Alpaca Markets broker adapter — REST + NATS fills"
requires-python = ">=3.12"
dependencies = [
    "zinc-schemas",
    "alpaca-py>=0.33",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "nats-py>=2.8",
    "psycopg[binary]>=3.2",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "uuid6>=2024.7",
]

[tool.uv.sources]
zinc-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/broker_adapter_alpaca"]
