[project]
name = "compliance-service"
version = "0.1.0"
description = "theeyebeta pre-trade compliance rule engine — gRPC CheckOrder"
requires-python = ">=3.12"
dependencies = [
    "zinc-proto",
    "zinc-schemas",
    "grpcio>=1.68",
    "protobuf>=5.29",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "psycopg[binary]>=3.2",
    "structlog>=24.4",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "prometheus-client>=0.21",
]

[tool.uv.sources]
zinc-proto = { workspace = true }
zinc-schemas = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_service"]
