[project]
name = "data-ingestion"
version = "0.1.0"
description = "theeyebeta data ingestion service (prices + macro)"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.50",
    "fredapi>=0.5.2",
    "polars[rtcompat]>=1.12",
    "pyarrow>=18.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "typer>=0.15",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.scripts]
tb-ingest = "data_ingestion.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_ingestion"]
